syntax = "proto3";

option go_package = "github.com/lapeko/udemy__grpc-golang/calculator/proto";

service CalculatorService {
  rpc Sum (SumRequest) returns (SumResponse);
  rpc Primes (PrimeRequest) returns (stream PrimeResponse);
  rpc Avg (stream AvgRequest) returns (AvgResponse);
}

message SumRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse {
  int32 sum = 1;
}

message PrimeRequest {
  uint32 number = 1;
}

message PrimeResponse {
  uint32 prime = 1;
}

message AvgRequest {
  int32 number = 1;
}

message AvgResponse {
  float avg = 1;
}