syntax = "proto3";

package calculator;

option go_package = "github.com/lapeko/udemy__grpc-golang/calculator/proto";

message MaxRequest {
  int32 number = 1;
}

message MaxResponse {
  int32 maxNumber= 1;
}