syntax = "proto3";

package calculator;

option go_package = "github.com/lapeko/udemy__grpc-golang/calculator/proto";

message SqrtRequest {
  int32 number = 1;
}

message SqrtResponse {
  double number = 1;
}